# anofox-statistics

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .markdownlint.json  CMakeLists.txt  CMakeLists_ext.txt  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PERFORMANCE_TESTING.md  README.md  apply_ols_fix.py  apply_window_fix.py  apply_wls_migration.py  customer_predictions.parquet  extension_config.cmake  final_aggregate_fix.py  fix_aggregate_extraction.py  fix_ols_aggregate.py  main.py  migrate_to_libanostat.py  migrate_wls.py  model_coefficients.csv  ols_aggregate_replacement.txt  package-lock.json  performance_testing.md  pyproject.toml  ridge_fit_predict_cache_fix.cpp  test_ci.R  test_collinear.R  test_collinear_exact.R  test_debug_ci.sql  test_rank_qr.cpp  test_results.txt  test_ridge  test_ridge.c  third_party  vcpkg.json
.beads/: issues.jsonl
.github/workflows/: MainDistributionPipeline.yml  _extension_deploy.yml
claude_skills/regression-query-builder/: SKILL.md
crates/anofox-stats-core/: Cargo.toml
crates/anofox-stats-core/src/: errors.rs  lib.rs  types.rs
crates/anofox-stats-core/src/diagnostics/: condition.rs  information_criteria.rs  jarque_bera.rs  mod.rs  residuals.rs  separation.rs  vif.rs
crates/anofox-stats-core/src/models/: aid.rs  alm.rs  bls.rs  elasticnet.rs  glm.rs  huber.rs  isotonic.rs  lars.rs  lm_dynamic.rs  lowess.rs  mod.rs  ols.rs  pls.rs  predict.rs  quantile.rs  ransac.rs  ridge.rs  rls.rs  theil_sen.rs  wls.rs
crates/anofox-stats-core/src/tests/: categorical.rs  correlation.rs  distributional.rs  equivalence.rs  forecast.rs  mod.rs  modern.rs  nonparametric.rs  parametric.rs  resampling.rs
crates/anofox-stats-ffi/: Cargo.toml  cbindgen.toml
crates/anofox-stats-ffi/src/: lib.rs  types.rs
docs/: API_REFERENCE.md
docs/api/: 00-api-design.md  01-regression-ols.md  02-regression-ridge.md  03-regression-elasticnet.md  04-regression-wls.md  05-regression-rls.md  06-regression-pls.md  07-regression-isotonic.md  08-regression-quantile.md  09-regression-glm.md  10-regression-alm.md  11-regression-bls-nnls.md  12-aid-functions.md  13-hypothesis-tests.md  14-fit-predict-window.md  15-fit-predict-aggregate.md  16-table-macros.md  17-predict.md  18-diagnostics.md  19-common-options.md  20-return-types.md  21-aliases.md  22-error-handling.md  23-performance.md
docs/guides/: 01_quick_start.md  04_advanced_use_cases.md
examples/: README.md  README_performance_tests.md  aid_demand_classification.sql  alm_fit_predict_agg.sql  bls_fit_predict_agg.sql  compare_sql_vs_r.sql  demand_classification_example.py  example-fit-predict-ols.R  example-fit-predict-ols.sql  generate_test_data.sql  model_prediction_demo.py  model_prediction_demo.sql  ols_diagnostics.sql  ols_inference.sql  ols_multiple_series.sql  ols_predict_agg.sql  ols_single_series.sql  ols_window_functions.sql  performance_test_ols_aggregate.R  performance_test_ols_aggregate.sql  performance_test_ols_fit_predict.R  performance_test_ols_fit_predict.sql  poisson_fit_predict_agg.sql  pyproject.toml  run_all_tests.sh  table_macros.sql
examples/__marimo__/: demand_classification_example.ipynb
examples/aid_demand_classification/: demand_classification_example.ipynb
examples/performance_10k_groups_R/: .gitignore  README.md  compare_sql_vs_r.sql  generate_test_data.sql  performance_test_ols_aggregate.R  performance_test_ols_aggregate.sql  performance_test_ols_fit_predict.R  performance_test_ols_fit_predict.sql  run_all_tests.sh
examples/performance_1m_groups/: README.md  benchmark_elasticnet.sql  benchmark_ols.sql  benchmark_ols_predict_agg.sql  benchmark_ridge.sql  benchmark_rls.sql  benchmark_wls.sql  run_all_benchmarks.sh
examples/performance_test/: README.md  compare_sql_vs_r.sql  generate_test_data.sql  performance_test_ols_aggregate.R  performance_test_ols_aggregate.sql  run_all_tests.sh  (+2 more)
guides/: 01_quick_start.md  02_technical_guide.md  03_business_guide.md  03_statistics_guide.md  04_advanced_use_cases.md  04_business_guide.md  05_advanced_use_cases.md  FUNCTION_REFERENCE.md  api_changes_v0.1.0.md  function_reference.md
libanostat/: .lcovrc  CMakeLists.txt  EXTRACTED_COMPONENTS.md  Makefile  README.md  test_ridge_fit_predict.cpp  test_runner  test_runner.cpp  vcpkg.json
libanostat/include/libanostat/core/: inference_result.hpp  regression_options.hpp  regression_result.hpp
libanostat/include/libanostat/diagnostics/: regression_diagnostics.hpp  regression_diagnostics_impl.hpp  vif.hpp
libanostat/include/libanostat/inference/: coefficient_inference.hpp  coefficient_inference_impl.hpp
libanostat/include/libanostat/solvers/: elastic_net_solver.hpp  i_regressor.hpp  ols_solver.hpp  ridge_solver.hpp  rls_solver.hpp  wls_solver.hpp
libanostat/include/libanostat/utils/: distributions.hpp
libanostat/test/: test_compilation.cpp  test_duckdb_failures.cpp  test_elastic_net.cpp  test_ols.cpp  test_ridge.cpp  test_rls.cpp  test_wls.cpp
libanostat/test/core/: test_core_structures.cpp  test_input_validation.cpp
libanostat/test/diagnostics/: test_regression_diagnostics.cpp
libanostat/test/inference/: test_inference.cpp
libanostat/test/integration/: test_full_workflow.cpp
libanostat/test/solvers/: test_coefficient_extraction.cpp  test_elastic_net.cpp  test_i_regressor.cpp  test_ols.cpp  test_rank_deficiency_edge_cases.cpp  test_ridge.cpp  test_rls.cpp  test_saturated_models.cpp  test_statistics_edge_cases.cpp  test_wls.cpp
libanostat/test/utils/: test_distributions.cpp
libanostat/tests/: test_inference.cpp
scripts/: build_docs.sh  check_code_quality.sh  extension-upload.sh  fix_format.sh  generate_predict_aggregates.py  generate_remaining_functions.py  install_hooks.sh  test_sql_examples.sh  test_sql_validation.sh
src/: anofox_statistics_extension.cpp  anofox_stats_extension.cpp
test/: TEST_API_MIGRATION_NOTES.md  rank_deficiency_comprehensive_test.sql  rank_deficiency_simple_test.sql
validation/: .gitignore  06_test_aggregates.R  07_test_elastic_net.R  08_test_prediction_validation.R  README.md  generate_all_data.sh  r_seesion_output.txt
(+513 files in other folders)
