[workspace]
members = ["crates/anofox-stats-core", "crates/anofox-stats-ffi"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Simon M"]
repository = "https://github.com/DataZooDE/anofox-statistics"

[workspace.dependencies]
regress-rs = "0.1"
faer = "0.20"
thiserror = "2.0"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
