[workspace]
members = [
    "crates/anofox-stats-core",
    "crates/anofox-stats-ffi"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Simon M"]
repository = "https://github.com/DataZooDE/anofox-statistics"

[workspace.dependencies]
anofox-regression = "0.3.1"
# faer: disable default features (which include rayon) - DuckDB handles parallelization
faer = { version = "0.23", default-features = false, features = ["std", "linalg"] }
thiserror = "2.0"
libc = "0.2"
statrs = "0.18"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
