[package]
name = "anofox-stats-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core statistics library for anofox-statistics DuckDB extension"

[dependencies]
regress-rs.workspace = true
faer.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx = "0.5"
